--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,13 @@
 # List of servers to monitor
 servers:
   - name: "Web Server 01"
-    host: "192.168.1.10"
+    host: "18.60.39.71"
     port: 22
-    user: "your_user"
-  - name: "DB Server"
-    host: "192.168.1.11"
-    port: 22
-    user: "your_user"
+    user: "ec2-user"
+  # - name: "DB Server"
+  #   host: "192.168.1.11"
+  #   port: 22
+  #   user: "your_user"
   # Add more servers here
 
 # SMTP settings for sending email reports
