--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ smtp:
   host: "smtp.example.com"
   port: 587
   username: "nani.y9966@gamil.com" # Use your email address
-  password: "sfjwjzerlgbegogf" # For app passwords, use them here
+  password: "" # For app passwords, use them here
   from: "nani.y9966@gmail.com"
   to:
     - "prabhakararao.nandigrama@assettl.com"
