--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ servers:
 smtp:
   host: "smtp.gmail.com" # Use your SMTP server
   port: 587
-  username: "nani.y9966@gamil.com" # Use your email address
+  username: "nani.y9966@gmail.com" # Use your email address
   password: "sfjwjzerlgbegogf" # For app passwords, use them here
   from: "nani.y9966@gmail.com"
   to:
